fix: add OPENSEARCH_PATH_CONF enviroment variable
Signed-off-by: Andres Carmelo Micalizzi Casali <amicalizzi2005@gmail.com>

--- a/stack/indexer/base/files/usr/lib/systemd/system/wazuh-indexer-performance-analyzer.service
+++ b/stack/indexer/base/files/usr/lib/systemd/system/wazuh-indexer-performance-analyzer.service
@@ -9,6 +9,7 @@ Restart=on-failure
 User=wazuh-indexer
 Group=wazuh-indexer
 Environment=OPENSEARCH_HOME=/usr/share/wazuh-indexer
+Environment=OPENSEARCH_PATH_CONF=/etc/wazuh-indexer/
 WorkingDirectory=/usr/share/wazuh-indexer
 
 [Install]
