--- a/unattended_installer/config/indexer/roles/roles.yml
+++ b/unattended_installer/config/indexer/roles/roles.yml
@@ -2,7 +2,7 @@ _meta:
   type: "roles"
   config_version: 2
 
-# Restrict users so they can only view visualization and dashboard on kibana
+# Restrict users to view the dashboard only
 kibana_read_only:
   reserved: true
 
