--- a/debs/SPECS/wazuh-agent/debian/control
+++ b/debs/SPECS/wazuh-agent/debian/control
@@ -12,3 +12,10 @@ Depends: ${shlibs:Depends}, libc6 (>= 2.7), lsb-release, debconf, adduser
 Conflicts: ossec-hids-agent, wazuh-manager, ossec-hids, wazuh-api
 Breaks: ossec-hids-agent, wazuh-manager, ossec-hids
 Description: Wazuh helps you to gain security visibility into your infrastructure by monitoring hosts at an operating system and application level. It provides the following capabilities: log analysis, file integrity monitoring, intrusions detection and policy and compliance monitoring
+
+Package: wazuh-agent-dbg
+Section: debug
+Priority: optional
+Architecture: any
+Depends: wazuh-agent
+Description: Debug symbols for wazuh-agent, this package contains debug symbols for debugging wazuh-agent.
